clusters/cluster/apps/verein-int/aoc/leaderboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoc-leaderboard
  namespace: verein-int
  labels:
    app: aoc-leaderboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoc-leaderboard
  template:
    metadata:
      labels:
        app: aoc-leaderboard
    spec:
      containers:
        - name: aoc-leaderboard
          image: ghcr.io/neuland-ingolstadt/neuland-aoc-leaderboard:build-7 # {"$imagepolicy": "flux-system:aoc-leaderboard"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
