clusters/cluster/apps/verein-int/aoc/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aoc-oauth2-proxy
  namespace: verein-int
  labels:
    app: aoc-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoc-oauth2-proxy
  template:
    metadata:
      labels:
        app: aoc-oauth2-proxy
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - name: oauth2-proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.11.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4180
          name: http
        readinessProbe:
          httpGet:
            path: /ping
            port: 4180
        livenessProbe:
          httpGet:
            path: /ping
            port: 4180
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
