clusters/cluster/apps/verein-int/aoc/scraper-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: aoc-leaderboard-scraper
  namespace: verein-int
spec:
  selector:
    matchLabels:
      app: aoc-leaderboard-scraper
  serviceName: "aoc-leaderboard-scraper"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: aoc-leaderboard-scraper
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: aoc-leaderboard-scraper
          image: ghcr.io/neuland-ingolstadt/aoc-leaderboard-scraper:1.2.0 # {"$imagepolicy": "flux-system:aoc-leaderboard-scraper"}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3333
              name: main
            - containerPort: 3334
              name: health
          readinessProbe:
            httpGet:
              path: /healthz
              port: health
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 3
          volumeMounts:
            - mountPath: /data
              name: data
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 500Mi
