clusters/cluster/apps/verein-int/aoc/leaderboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aoc-leaderboard
  namespace: verein-int
spec:
  type: ClusterIP
  selector:
    app: aoc-leaderboard
  ports:
  - name: http
    port: 80
    targetPort: 3000
