clusters/cluster/apps/verein-int/aoc/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aoc-oauth2-proxy
  namespace: verein-int
spec:
  type: ClusterIP
  selector:
    app: aoc-oauth2-proxy
  ports:
    - name: http
      port: 4180
      targetPort: 4180
