clusters/cluster/apps/verein-int/aoc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aoc-leaderboard
  namespace: verein-int
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - aoc.neuland.ing
    secretName: aoc-neuland-ing-tls
  rules:
  - host: aoc.neuland.ing
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aoc-oauth2-proxy
            port:
              number: 4180
